--- a/styles.css
+++ b/styles.css
@@ -38,6 +38,7 @@ li {
 }
 
 .container {
+  position: relative;
   min-height: 100%;
   display: flex;
   flex-direction: column;
@@ -120,12 +121,15 @@ img {
 }
 
 .attribution {
+  position: absolute;
+  bottom: 20px;
   font-size: 11px;
   text-align: center;
+  padding: 10px;
 }
 
 .attribution a {
-  color: hsl(228, 45%, 44%);
+  color: var(--clr-soft-violet);
 }
 
 @media only screen and (max-width: 1000px) {
